// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embedding 1`] = `
{
  "embedding": Float32Array [
    -0.03405065834522247,
    -0.04686957970261574,
    0.03055335022509098,
    -0.032443080097436905,
    0.025718456134200096,
    0.004355229903012514,
    0.04408268630504608,
    0.01123812235891819,
    0.043973181396722794,
    -0.006767743267118931,
    -0.005066356156021357,
    0.03016958013176918,
    0.04352811723947525,
    0.010958707891404629,
    0.05270364135503769,
    -0.0010072471341118217,
    -0.02650398388504982,
    -0.024477925151586533,
    -0.11242780834436417,
    -0.023293830454349518,
    0.07049746811389923,
    -0.07772725075483322,
    0.022198902443051338,
    0.013874157331883907,
    -0.03295326977968216,
    -0.005434249062091112,
    0.01703130081295967,
    -0.026834964752197266,
    -0.01997203938663006,
    -0.08626952022314072,
    -0.01068512536585331,
    -0.051660045981407166,
    0.030844785273075104,
    -0.0031365680042654276,
    0.010716437362134457,
    0.068667471408844,
    -0.019436215981841087,
    0.033950675278902054,
    -0.017557546496391296,
    -0.007935144938528538,
    0.0023947823792696,
    -0.01317918673157692,
    -0.04514148086309433,
    -0.06921932846307755,
    -0.10232458263635635,
    -0.05141826719045639,
    -0.009789273142814636,
    -0.011455805040895939,
    0.025521235540509224,
    0.019212160259485245,
    -0.000667537038680166,
    -0.026835232973098755,
    0.0586179681122303,
    -0.04510987177491188,
    -0.01046284381300211,
    0.05616871640086174,
    0.06300155818462372,
    -0.0007199294632300735,
    0.005079043563455343,
    -0.0021918523125350475,
    0.030626876279711723,
    0.007128927856683731,
    -0.14483322203159332,
    0.08341744542121887,
    0.07884441316127777,
    0.02700904756784439,
    0.026468690484762192,
    -0.042019352316856384,
    0.05501919984817505,
    -0.0035167080350220203,
    -0.1254086047410965,
    0.006496933288872242,
    0.045826710760593414,
    0.026155728846788406,
    0.01006966084241867,
    0.10263780504465103,
    0.011026966385543346,
    -0.02295873500406742,
    0.00285159470513463,
    -0.006918621715158224,
    0.0021794517524540424,
    0.000009866732398222666,
    -0.02920190803706646,
    0.031593456864356995,
    0.03460872173309326,
    -0.02340547740459442,
    0.01666244864463806,
    -0.01687115617096424,
    0.06542258709669113,
    -0.01397499069571495,
    -0.05309569463133812,
    -0.01703045330941677,
    0.0015864013694226742,
    0.03727247938513756,
    -0.09013134986162186,
    -0.04101065173745155,
    0.08188129961490631,
    -0.05415269732475281,
    0.04970486834645271,
    0.3254919648170471,
    -0.08834616839885712,
    0.027563761919736862,
    0.0537349171936512,
    0.02882879041135311,
    0.04109931364655495,
    -0.04938986152410507,
    0.0532696470618248,
    -0.0714849978685379,
    0.07842003554105759,
    0.028814690187573433,
    0.004722122568637133,
    -0.07597856223583221,
    -0.012870647013187408,
    -0.08168625831604004,
    0.011512567289173603,
    0.05609270557761192,
    0.05063605681061745,
    -0.031029855832457542,
    0.032218411564826965,
    0.02246137708425522,
    0.028342561796307564,
    0.026634294539690018,
    -0.035024676471948624,
    -0.05690895393490791,
    -0.09179484844207764,
    -0.06596225500106812,
    0.11564554274082184,
    0.07812509685754776,
    -0.02936466410756111,
    -0.02753426320850849,
    0.019463764503598213,
    -0.009487487375736237,
    0.021462861448526382,
    0.017974363639950752,
    -0.030322818085551262,
    -0.013484623283147812,
    -0.015366069041192532,
    0.009974050335586071,
    0.0043472484685480595,
    -0.07918763905763626,
    -0.027557237073779106,
    -0.2107182741165161,
    -0.03558902442455292,
    -0.05841787904500961,
    0.0019224125426262617,
    0.0035062285605818033,
    0.06552839279174805,
    0.09225044399499893,
    -0.03419499471783638,
    -0.008564435876905918,
    -0.0770621970295906,
    0.01193726621568203,
    -0.06103115528821945,
    -0.0018695922335609794,
    0.030404439195990562,
    0.03616860881447792,
    0.02200603485107422,
    0.02104582078754902,
    0.02992183342576027,
    -0.012652173638343811,
    -0.022600872442126274,
    -0.03334002569317818,
    0.036087311804294586,
    -0.025287825614213943,
    0.01915605366230011,
    -0.09894876927137375,
    0.010994336567819118,
    0.05967956408858299,
    -0.002605088520795107,
    -0.02118683233857155,
    0.03902656212449074,
    0.024819139391183853,
    -0.04531938210129738,
    0.024466540664434433,
    0.08177556097507477,
    0.012894284911453724,
    -0.0055573140271008015,
    0.010384738445281982,
    -0.0315973237156868,
    0.049669455736875534,
    0.022691549733281136,
    -0.03094572201371193,
    0.02256726287305355,
    0.02954855002462864,
    0.038608014583587646,
    -0.005588310305029154,
    0.05748414993286133,
    -0.033560484647750854,
    0.08195825666189194,
    0.05268153175711632,
    0.07760839909315109,
    -0.01660006493330002,
    0.025333790108561516,
    0.02805635705590248,
    -0.046674009412527084,
    0.02338157780468464,
    0.03560318797826767,
    -0.07074291259050369,
    -0.007757657673209906,
    -0.10588479042053223,
    -0.06220144405961037,
    -0.05738508328795433,
    0.021315215155482292,
    -0.014794114045798779,
    0.0568682998418808,
    0.03414379432797432,
    0.03259486332535744,
    -0.018665630370378494,
    -0.013307193294167519,
    -0.02466466836631298,
    -0.032500509172677994,
    0.005007308442145586,
    0.056813426315784454,
    -0.019577212631702423,
    -0.03577810525894165,
    -0.017162978649139404,
    -0.007953212596476078,
    0.02320445328950882,
    0.047702573239803314,
    0.0009720809757709503,
    0.03241980820894241,
    -0.039637286216020584,
    0.002799659501761198,
    -0.28545671701431274,
    0.043957483023405075,
    -0.019211962819099426,
    -0.026172012090682983,
    -0.037484221160411835,
    -0.04581289738416672,
    -0.0051568178460001945,
    -0.04648100584745407,
    0.043156664818525314,
    0.002794660162180662,
    -0.0288441963493824,
    -0.03574845939874649,
    0.020329250022768974,
    -0.035511430352926254,
    0.00550580071285367,
    0.018476471304893494,
    0.0076607586815953255,
    0.029678400605916977,
    0.018630214035511017,
    0.027054443955421448,
    -0.019694628193974495,
    0.031123122200369835,
    -0.003889424493536353,
    -0.023604154586791992,
    0.012482953257858753,
    -0.006149912718683481,
    0.16116879880428314,
    0.11753422766923904,
    -0.05045323818922043,
    -0.037736907601356506,
    -0.00892549753189087,
    -0.003608772298321128,
    -0.032120343297719955,
    -0.038096100091934204,
    -0.03276071697473526,
    0.041192423552274704,
    0.0417582169175148,
    -0.021365150809288025,
    -0.014901665039360523,
    -0.06474533677101135,
    -0.04073113948106766,
    0.014634618535637856,
    -0.019434405490756035,
    -0.0010132770985364914,
    -0.08011295646429062,
    -0.04469691962003708,
    0.04869816079735756,
    0.014774718321859837,
    -0.03413211181759834,
    0.07015790790319443,
    0.026430761441588402,
    -0.0763322189450264,
    -0.01736423186957836,
    0.006973897572606802,
    -0.02025473862886429,
    -0.007849734276533127,
    -0.012497734278440475,
    0.003375670639798045,
    0.0025357671547681093,
    0.004696668591350317,
    0.028599727898836136,
    0.045149046927690506,
    -0.02918298728764057,
    -0.015600496903061867,
    0.01586003601551056,
    0.01713951863348484,
    -0.03205873444676399,
    -0.06613631546497345,
    -0.009324189275503159,
    -0.0396873764693737,
    -0.06812679022550583,
    0.02325580082833767,
    -0.04090645909309387,
    -0.025628848001360893,
    0.01990688405930996,
    0.01826094649732113,
    0.05225425213575363,
    -0.010348482988774776,
    -0.060385819524526596,
    0.016403594985604286,
    -0.03352827578783035,
    -0.019666001200675964,
    -0.002892847638577223,
    0.058730725198984146,
    0.006957595236599445,
    0.01717323064804077,
    -0.02289837971329689,
    0.020823920145630836,
    -0.002041224157437682,
    -0.0006902660243213177,
    -0.05991082638502121,
    0.03867478296160698,
    0.04821353033185005,
    -0.000763769494369626,
    -0.017719104886054993,
    -0.026720063760876656,
    -0.2455403208732605,
    0.015877392143011093,
    -0.04267758131027222,
    0.07593235373497009,
    -0.019638502970337868,
    0.06345511227846146,
    -0.011800303123891354,
    0.07131174951791763,
    0.005492342635989189,
    -0.020676052197813988,
    -0.0051590558141469955,
    0.039504505693912506,
    0.061393894255161285,
    0.01595057174563408,
    -0.04581223800778389,
    0.0338592603802681,
    0.06369612365961075,
    -0.0047807167284190655,
    0.002746698446571827,
    -0.07784527540206909,
    0.04475218430161476,
    0.02044941857457161,
    0.18459783494472504,
    -0.004280212800949812,
    0.0013070228742435575,
    -0.02854607254266739,
    0.028173912316560745,
    0.010650048032402992,
    0.022673361003398895,
    0.03806731104850769,
    0.010306993499398232,
    0.006513552740216255,
    0.01908239722251892,
    -0.022936059162020683,
    0.0016223995480686426,
    0.030404679477214813,
    -0.01640494167804718,
    0.022523174062371254,
    0.015468898229300976,
    0.015386420302093029,
    -0.03759876638650894,
    0.04614710435271263,
    -0.014495699666440487,
    -0.06704354286193848,
    0.08571866899728775,
    -0.0003281363460700959,
    -0.01757124252617359,
    -0.0002214244013885036,
    -0.044068753719329834,
    -0.01798885315656662,
    -0.05275014787912369,
    -0.010676667094230652,
    0.08436724543571472,
    0.03655802831053734,
    -0.007231920026242733,
    0.0393967404961586,
    -0.0030295473989099264,
    0.08886074274778366,
    0.012701141647994518,
    0.02195669710636139,
    0.006647620350122452,
    -0.00809475127607584,
    0.032285176217556,
    -0.009700831025838852,
    0.00345305516384542,
  ],
}
`;

exports[`tokeneize 1`] = `
{
  "tokens": Int32Array [
    9038,
    2501,
    263,
    931,
  ],
}
`;

exports[`tokeneize 2`] = `"xxx"`;

exports[`tokeneize 3`] = `
"<|im_start|>user
<|im_end|>
<|im_start|>bot
<|im_end|>
<|im_start|>assistant
"
`;

exports[`works fine 1`] = `
{
  "text": " swochadoorter scientific WindowsCa occupiedrå alta",
  "timings": "Timings: (8) keys",
  "tokens_evaluated": 18,
  "tokens_predicted": 10,
  "truncated": false,
}
`;

exports[`works fine with vocab_only: empty result 1`] = `
{
  "text": "",
  "timings": {
    "predicted_ms": 0,
    "predicted_n": 1,
    "predicted_per_second": Infinity,
    "predicted_per_token_ms": 0,
    "prompt_ms": 0,
    "prompt_n": 1,
    "prompt_per_second": Infinity,
    "prompt_per_token_ms": 0,
  },
  "tokens_evaluated": 0,
  "tokens_predicted": 0,
  "truncated": false,
}
`;

exports[`works fine with vocab_only: model info 1`] = `
{
  "desc": "",
  "isChatTemplateSupported": false,
  "metadata": {
    "general.architecture": "llama",
    "general.file_type": "1",
    "general.name": "LLaMA v2",
    "llama.attention.head_count": "2",
    "llama.attention.head_count_kv": "2",
    "llama.attention.layer_norm_rms_epsilon": "0.000010",
    "llama.block_count": "1",
    "llama.context_length": "4096",
    "llama.embedding_length": "8",
    "llama.feed_forward_length": "32",
    "llama.rope.dimension_count": "4",
    "tokenizer.ggml.bos_token_id": "1",
    "tokenizer.ggml.eos_token_id": "2",
    "tokenizer.ggml.model": "llama",
    "tokenizer.ggml.unknown_token_id": "0",
  },
  "nParams": 513048,
  "size": 1026144,
}
`;

exports[`works fine with vocab_only: tokenize 1`] = `
{
  "tokens": Int32Array [
    9038,
    2501,
    263,
    931,
  ],
}
`;

exports[`works fine: model info 1`] = `
{
  "desc": "llama ?B F16",
  "isChatTemplateSupported": false,
  "metadata": {
    "general.architecture": "llama",
    "general.file_type": "1",
    "general.name": "LLaMA v2",
    "llama.attention.head_count": "2",
    "llama.attention.head_count_kv": "2",
    "llama.attention.layer_norm_rms_epsilon": "0.000010",
    "llama.block_count": "1",
    "llama.context_length": "4096",
    "llama.embedding_length": "8",
    "llama.feed_forward_length": "32",
    "llama.rope.dimension_count": "4",
    "tokenizer.ggml.bos_token_id": "1",
    "tokenizer.ggml.eos_token_id": "2",
    "tokenizer.ggml.model": "llama",
    "tokenizer.ggml.unknown_token_id": "0",
  },
  "nParams": 513048,
  "size": 1026144,
}
`;
